--- a/views/stylists.html.twig
+++ b/views/stylists.html.twig
@@ -25,7 +25,7 @@
 
             <form action="/stylists" method="post">
                 <label for="name">Enter a Stylist:</label>
-                <input type="text" name="name">
+                <input type="text" name="name" required>
 
                 <button name="submit">Create!</button>
             </form>
