--- a/views/client_edit.html.twig
+++ b/views/client_edit.html.twig
@@ -3,6 +3,7 @@
     <head>
         <title>Edit Page</title>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
     <body>
         <div class="container">
